# Xie-Briup

./: README.md
Indoor air quality AI warning/SHGateway/: CMakeLists.txt  main.cpp  mainpage.cpp  mainpage.h  mainpage.ui  netcontext.cpp  netcontext.h  serialcontext.cpp  serialcontext.h
Indoor air quality AI warning/SHGatewayAndroidClient/: CLAUDE.md  CMakeCache.txt.prev  CMakeLists.txt  GatewayClient.bat  android-GatewayClient-deployment-settings.json  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  qml.qrc  sensorcontroller.cpp  sensorcontroller.h  tcpclient.cpp
Indoor air quality AI warning/SHGatewayAndroidClient/.claude/: settings.local.json
Indoor air quality AI warning/SHGatewayAndroidClient/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
Indoor air quality AI warning/SHGatewayAndroidClient/.qt/qml_imports/: GatewayClient_conf.cmake  GatewayClient_conf.rsp
Indoor air quality AI warning/SHGatewayAndroidClient/.qt/rcc/: qrc_qml_resources.cpp
Indoor air quality AI warning/SHGatewayAndroidClient/GatewayClient_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
Indoor air quality AI warning/SHGatewayAndroidClient/GatewayClient_autogen/EWIEGA46WW/: moc_sensorcontroller.cpp  moc_sensorcontroller.cpp.json  moc_tcpclient.cpp
Indoor air quality AI warning/SHGatewayAndroidClient/android/: AndroidManifest.xml
Indoor air quality AI warning/SHGatewayAndroidClient/android-build-GatewayClient/: build.gradle  gradle.properties  local.properties
Indoor air quality AI warning/SHGatewayAndroidClient/build_android/: .ninja_deps  .ninja_log  GatewayClient.bat  android-GatewayClient-deployment-settings.json  build.ninja
Indoor air quality AI warning/SHGatewayAndroidClient/build_android/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
Indoor air quality AI warning/SHGatewayAndroidClient/build_android/GatewayClient_autogen/: deps
Indoor air quality AI warning/SHGatewayAndroidClient/build_android/android-build/: build.gradle  gradle.properties
Indoor air quality AI warning/SHGatewayAndroidClient/build_android/meta_types/: GatewayClient_json_file_list.txt  GatewayClient_json_file_list.txt.timestamp  qt6gatewayclient_debug_metatypes.json
Indoor air quality AI warning/SHGatewayAndroidClient/meta_types/: GatewayClient_json_file_list.txt  GatewayClient_json_file_list.txt.timestamp  qt6gatewayclient_debug_metatypes.json
Indoor air quality AI warning/SHGatewayAndroidClient/qml/: AlertDialog.qml  ChartPage.qml  ControlPage.qml  DashboardPage.qml  LoginPage.qml  ThresholdPage.qml  main.qml
Indoor air quality AI warning/SHGatewayClient/: CMakeLists.txt  logindialog.cpp  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tcpclient.cpp  tcpclient.h
Indoor air quality AI warning/SHServer/: CLAUDE.md  CMakeLists.txt  main.cpp  systemcontrol.cpp  systemcontrol.h
Indoor air quality AI warning/SHServer/config/: configcontext.cpp  configcontext.h
Indoor air quality AI warning/SHServer/db/: dbcontext.cpp  dbcontext.h  dbexec.cpp  dbexec.h
Indoor air quality AI warning/SHServer/log/: logcontext.cpp  logcontext.h
Indoor air quality AI warning/SHServer/mqtt/: mqttcontext.cpp  mqttcontext.h  mqttpublisher.cpp  mqttpublisher.h
Indoor air quality AI warning/SHServer/net/: mytcpserver.cpp  mytcpserver.h  mytcpsocket.cpp  mytcpsocket.h  netcontext.cpp  netcontext.h  threadshandle.h  threshold.cpp  threshold.h
Intelligent transportation/SCCarQml/: CMakeLists.txt  Main.qml  main.cpp  systemcontrol.cpp  systemcontrol.h
Intelligent transportation/SCCarQml/config/: configcontext.cpp  configcontext.h
Intelligent transportation/SCCarQml/data/: datacontext.cpp  datacontext.h
Intelligent transportation/SCCarQml/net/: netcontext.cpp  netcontext.h
Intelligent transportation/SCCrossingQML/: CMakeLists.txt  Main.qml  main.cpp  systemcontrol.cpp  systemcontrol.h
Intelligent transportation/SCCrossingQML/config/: configcontext.cpp  configcontext.h
Intelligent transportation/SCCrossingQML/data/: datacontext.cpp  datacontext.h
Intelligent transportation/SCCrossingQML/net/: netcontext.cpp  netcontext.h
Intelligent transportation/SCServer/: CMakeLists.txt  main.cpp  systemcontrol.cpp  systemcontrol.h
Intelligent transportation/SCServer/config/: configcontext.cpp  configcontext.h
Intelligent transportation/SCServer/log/: logcontext.cpp  logcontext.h
Intelligent transportation/SCServer/net/: mytcpserver.cpp  mytcpserver.h  mytcpsocket.cpp  mytcpsocket.h  netcontext.cpp  netcontext.h
Intelligent transportation/SSClient/: .qmlls.ini  CMakeLists.txt  CarSet.qml  CrossingSet.qml  Main.qml  Map.qml  SystemSet.qml  main.cpp  systemcontrol.cpp  systemcontrol.h
Intelligent transportation/SSClient/config/: configcontext.cpp  configcontext.h
Intelligent transportation/SSClient/data/: datacontext.cpp  datacontext.h
Intelligent transportation/SSClient/net/: netcontext.cpp  netcontext.h
chat/ChatClient/: CMakeLists.txt  edituserinfopage.cpp  edituserinfopage.h  edituserinfopage.ui  finduserpage.cpp  finduserpage.h  finduserpage.ui  friendreqlistpage.cpp  friendreqlistpage.h  friendreqlistpage.ui  loginpage.cpp  loginpage.h  loginpage.ui  main.cpp  mainpage.cpp  mainpage.h  mainpage.ui  userchangepasswordpage.cpp  userchangepasswordpage.h  userchangepasswordpage.ui
chat/ChatClient/config/: configcontext.cpp  configcontext.h
chat/ChatClient/db/: chathistorymanager.cpp  chathistorymanager.h
chat/ChatClient/mqtt/: mqttclientmanager.cpp  mqttclientmanager.h  mqttcontext.cpp  mqttcontext.h
chat/ChatClient/net/: netcontext.cpp  netcontext.h
chat/ChatServer/: CMakeLists.txt  main.cpp  systemcontrol.cpp  systemcontrol.h
chat/ChatServer/config/: configcontext.cpp  configcontext.h
chat/ChatServer/db/: dbcontext.cpp  dbcontext.h  dbexec.cpp  dbexec.h
chat/ChatServer/log/: logcontext.h
chat/ChatServer/mqtt/: mqttclientmanager.cpp  mqttclientmanager.h  mqttcontext.cpp  mqttcontext.h
chat/ChatServer/net/: mytcpserver.cpp  mytcpserver.h  mytcpsocket.cpp  mytcpsocket.h  netcontext.cpp  netcontext.h  threadshandle.cpp  threadshandle.h
(+150 files in other folders)
